--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Nicholas Brink",
-            "email": "nbrink7@gmail.edu"
+            "email": "nbrink7@gmail.com"
         }
     ],
     "autoload": {
